--- a/src/app/pages/tournament-list/tournament-detail/tournament-detail.component.html
+++ b/src/app/pages/tournament-list/tournament-detail/tournament-detail.component.html
@@ -20,7 +20,10 @@
       </mat-checkbox>
     </div>
 
-    <mat-tab-group>
+    <mat-tab-group
+      [selectedIndex]="activeTab"
+      (selectedIndexChange)="onTabChange($event)"
+    >
       <mat-tab label="Teams">
         <div class="teams-container">
           <div class="teams-header">
@@ -49,7 +52,7 @@
         </mat-tab>
 
         <mat-tab label="Knockout">
-          <app-knockout [tournamentId]="tournamentId" />
+          <app-knockout [id]="tournamentId" />
         </mat-tab>
       }
     </mat-tab-group>
