--- a/src/app/pages/tournament-list/tournament-detail/knockout/knockout.component.html
+++ b/src/app/pages/tournament-list/tournament-detail/knockout/knockout.component.html
@@ -1,65 +1,106 @@
+<div class="round-selection">
+  <!-- <button
+    mat-stroked-button
+    [color]="userSelection()[3] ? 'primary' : ''"
+    (click)="updateUserSelection(3)"
+  >
+    Octofinals
+  </button>
+  <button
+    mat-stroked-button
+    [color]="userSelection()[2] ? 'primary' : ''"
+    (click)="updateUserSelection(2)"
+    [disabled]="userSelection()[3]"
+  >
+    Quarter-finals
+  </button>
+  <button
+    mat-stroked-button
+    [color]="userSelection()[1] ? 'primary' : ''"
+    (click)="updateUserSelection(1)"
+    [disabled]="userSelection()[2]"
+  >
+    Semi-finals
+  </button> -->
+  <button
+    mat-stroked-button
+    [color]="userSelection()[4] ? 'primary' : ''"
+    (click)="updateUserSelection(4)"
+  >
+    Third place
+  </button>
+</div>
+
 <div class="knockout-bracket">
-  @for (round of getKnockoutRounds(); track round) {
+  @let octo = octofinals();
+  @if (octo) {
     <div class="round">
-      <h3>{{ getRoundName(round.round) }}</h3>
+      <h3>Octofinals</h3>
       <div class="round-matches">
-        @for (match of round.matches; track match.id) {
-          <mat-card class="match-card">
-            <mat-card-content>
-              <div class="match-teams">
-                <span class="team1">
-                  {{ getTeamName(match.team1Id) }}
-                </span>
-                <span class="vs">vs</span>
-                <span class="team2">
-                  {{ getTeamName(match.team2Id) }}
-                </span>
-              </div>
-              <div class="match-scores">
-                <mat-form-field>
-                  <input
-                    matInput
-                    type="number"
-                    [(ngModel)]="match.team1Score"
-                    min="0"
-                    (change)="
-                      updateMatchScore(
-                        match,
-                        match.team1Score,
-                        match.team2Score
-                      )
-                    "
-                  />
-                </mat-form-field>
-                <span>-</span>
-                <mat-form-field>
-                  <input
-                    matInput
-                    type="number"
-                    [(ngModel)]="match.team2Score"
-                    min="0"
-                    (change)="
-                      updateMatchScore(
-                        match,
-                        match.team1Score,
-                        match.team2Score
-                      )
-                    "
-                  />
-                </mat-form-field>
-              </div>
-              <mat-checkbox
-                [(ngModel)]="match.completed"
-                (change)="
-                  updateMatchScore(match, match.team1Score, match.team2Score)
-                "
-              >
-                Completed
-              </mat-checkbox>
-            </mat-card-content>
-          </mat-card>
+        @for (match of octo; track match.id) {
+          <app-match-card
+            [tournamentId]="id()"
+            [match_i]="match"
+            (matchComplete)="onMatchComplete(match)"
+          ></app-match-card>
         }
       </div>
     </div>
   }
+
+  @let quart = quarters();
+  @if (quart) {
+    <div class="round">
+      <h3>Quarter-finals</h3>
+      <div class="round-matches">
+        @for (match of quart; track match.id) {
+          <app-match-card
+            [tournamentId]="id()"
+            [match_i]="match"
+            (matchComplete)="onMatchComplete(match)"
+            [teams_selectable]="!userSelection()[3]"
+          ></app-match-card>
+        }
+      </div>
+    </div>
+  }
+
+  @let semi = semifinals();
+  @if (semi) {
+    <div class="round">
+      <h3>Semi-finals</h3>
+      <div class="round-matches">
+        @for (match of semi; track match.id) {
+          <app-match-card
+            [tournamentId]="id()"
+            [match_i]="match"
+            (matchComplete)="onMatchComplete(match)"
+            [teams_selectable]="!userSelection()[2]"
+          ></app-match-card>
+        }
+      </div>
+    </div>
+  }
+
+  <div class="round">
+    <h3>Finals</h3>
+    <div class="round-matches">
+      <app-match-card
+        [tournamentId]="id()"
+        [match_i]="final()!"
+        (matchComplete)="onMatchComplete($event)"
+      ></app-match-card>
+
+      @if (thirdPlaceMatch()) {
+        <div>
+          <h3 class="m-0">Third place</h3>
+          <app-match-card
+            [tournamentId]="id()"
+            [match_i]="thirdPlaceMatch()!"
+            (matchComplete)="onMatchComplete($event)"
+          ></app-match-card>
+        </div>
+      }
+    </div>
+  </div>
 </div>
