--- a/src/app/pages/tournament-list/tournament-detail/tournament-detail.component.html
+++ b/src/app/pages/tournament-list/tournament-detail/tournament-detail.component.html
@@ -20,32 +20,39 @@
       </mat-checkbox>
     </div>
 
+    <div class="teams-container">
+      <div class="teams-header">
+        <div class="teams-header-left">
+          <h2>Teams</h2>
+          <app-number-groups [id]="tournamentId" />
+        </div>
+        <button
+          #addTeamBtn
+          mat-raised-button
+          color="primary"
+          (click)="addTeam()"
+        >
+          <mat-icon>add</mat-icon>
+          <span class="ml-1">Add Team</span>
+        </button>
+        <button
+          #addTeamBtn
+          mat-raised-button
+          color="primary"
+          (click)="resetPoints()"
+        >
+          <mat-icon>reset</mat-icon>
+          <span class="ml-1">Reset Points</span>
+        </button>
+      </div>
+
+      <app-group [id]="tournamentId" />
+    </div>
+
     <mat-tab-group
       [selectedIndex]="activeTab"
       (selectedIndexChange)="onTabChange($event)"
     >
-      <mat-tab label="Teams">
-        <div class="teams-container">
-          <div class="teams-header">
-            <div class="teams-header-left">
-              <h2>Teams</h2>
-              <app-number-groups [id]="tournamentId" />
-            </div>
-            <button
-              #addTeamBtn
-              mat-raised-button
-              color="primary"
-              (click)="addTeam()"
-            >
-              <mat-icon>add</mat-icon>
-              <span class="ml-1">Add Team</span>
-            </button>
-          </div>
-
-          <app-group [id]="tournamentId" />
-        </div>
-      </mat-tab>
-
       @if (tournament && tournament.teams && tournament.teams.size > 1) {
         <mat-tab label="Matches">
           <app-matches [id]="tournamentId" />
