translate to german

--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -14,7 +14,7 @@
         class="text-xl font-semibold text-[color:var(--color-header-text)] mb-0 hover:bg-"
         [routerLink]="['/']"
       >
-        Beer Pong Tournaments
+        Bier Pong Turniere
       </h1>
     </div>
     <nav class="flex gap-3">
@@ -23,7 +23,7 @@
         class="px-3 py-1.5 text-sm font-medium rounded-md bg-transparent text-black hover:bg-black/10 transition-colors flex items-center gap-2"
       >
         <mat-icon>rules</mat-icon>
-        Rules
+        Regeln
       </button>
       <button
         routerLink="/tournaments"
@@ -43,7 +43,7 @@
             d="M4 6h16M4 10h16M4 14h16M4 18h16"
           />
         </svg>
-        List Tournaments
+        Turnier Liste
       </button>
 
       <button
@@ -64,7 +64,7 @@
             d="M12 4v16m8-8H4"
           />
         </svg>
-        Create Tournament
+        Turnier erstellen
       </button>
     </nav>
   </div>
