--- a/src/app/pages/tournament-list/tournament-detail/team-dialog/team-dialog.component.html
+++ b/src/app/pages/tournament-list/tournament-detail/team-dialog/team-dialog.component.html
@@ -1,4 +1,4 @@
-<h2 mat-dialog-title>{{ isEditing ? "Edit Team" : "Add Team" }}</h2>
+<h2 mat-dialog-title>{{ isEditing ? "Edit Team" : "Team hinzufügen" }}</h2>
 <form [formGroup]="teamForm" (ngSubmit)="onSubmit()">
   <mat-dialog-content>
     <div class="flex items-center gap-2 mb-4">
